--- a/styles.css
+++ b/styles.css
@@ -176,4 +176,23 @@ details{
   }
 }
 
+@media (min-width: 769px) {
+  header, main {
+    margin: 2rem auto;
+    padding: 2rem;
+    max-width: 900px;
+  }
+
+  .intro {
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 2rem;
+    max-width: 700px;
+  }
+
+  body {
+    font-size: 20px;
+  }
+}
+
 
